Fixed the spacings between the cards

--- a/src/components/TheOtherGrid/style.css
+++ b/src/components/TheOtherGrid/style.css
@@ -1,9 +1,3 @@
-.card {
-    margin: 20px;
-    /* border: 2px solid red; */
-    text-align: left;
-}
-
 .containerForAllCards {
     margin: 0px auto;
     width: 1235px;
